FIX. Applies the correct header styles for both pages.

--- a/catalog.html
+++ b/catalog.html
@@ -37,7 +37,8 @@
   <body>
   <header class="site-header">
     <a href="index.html" class="logo">device</a>
-    <div class="header-panel">
+
+    <nav class="user-nav">
       <form method="get" action="https://echo.htmlacademy.ru/" class="header-panel-form">
         <input type="search" placeholder="Поиск по сайту" id="search-field" class="search-field" aria-label="Поиск по сайту">
         <input type="submit" value="Найти" class="search-btn">
@@ -63,7 +64,8 @@
           Корзина
         </a>
       </div>
-    </div>
+    </nav>
+
     <nav class="header-nav">
       <ul class="main-menu">
         <li class="menu-item sub-menu"><a href="catalog.html" class="menu-link">каталог товаров</a>
@@ -76,9 +78,9 @@
             <li class="catalog-item"><a href="#" class="site-link">Экшн-камеры</a></li>
           </ul>
         </li>
-        <li class="menu-item"><a href="#" class="menu-link">доставка</a></li>
-        <li class="menu-item"><a href="#" class="menu-link">гарантия</a></li>
-        <li class="menu-item"><a href="#" class="menu-link">контакты</a></li>
+        <li class="menu-item menu-delivery"><a href="#" class="menu-link">доставка</a></li>
+        <li class="menu-item menu-warranty"><a href="#" class="menu-link">гарантия</a></li>
+        <li class="menu-item menu-contacts"><a href="#" class="menu-link">контакты</a></li>
       </ul>
     </nav>
   </header>
