Changes "radio" switches to links in slider.

--- a/index.html
+++ b/index.html
@@ -84,9 +84,6 @@
     <main>
       <h1 class="visually-hidden">Интернет-магазин Device</h1>
       <div class="slider-wrapper">
-        <input id="el1" name="switch" type="radio">
-        <input id="el2" name="switch" type="radio">
-        <input id="el3" name="switch" type="radio">
         <div class="slider-element slide-selfie">
           <div class="img-wrapper">
             <img src="img/index/slider/slider-1.png" alt="монопод для селфи" width="384" height="486">
@@ -153,9 +150,9 @@
           </table>
         </div>
         <div class="slider-switch">
-          <label for="el1">01</label>
-          <label for="el2">02</label>
-          <label for="el3">03</label>
+          <a class="slider-btn">01</a>
+          <a class="slider-btn">02</a>
+          <a class="slider-btn">03</a>
         </div>
       </div>
       <section class="categories">
