Changes input to button for search-btn in header. Fixes hover effect for item in catalog page.

--- a/catalog.html
+++ b/catalog.html
@@ -41,7 +41,7 @@
     <nav class="user-nav">
       <form method="get" action="https://echo.htmlacademy.ru/" class="header-panel-form">
         <input type="search" placeholder="Поиск по сайту" id="search-field" class="search-field" aria-label="Поиск по сайту">
-        <input type="submit" value="Найти" class="search-btn">
+        <button type="submit" class="search-btn">Найти</button>
       </form>
       <div class="links-wrapper">
         <p class="user-name">
