--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <nav class="user-nav">
         <form method="get" action="https://echo.htmlacademy.ru/" class="header-panel-form">
           <input type="search" placeholder="Поиск по сайту" name="search-text" id="search-field" class="search-field" aria-label="Поиск по сайту">
-          <input type="submit" value="Найти" class="search-btn">
+          <button type="submit" class="search-btn">Найти</button>
         </form>
         <div class="links-wrapper">
           <a href="#" class="site-link login">
