--- a/catalog.html
+++ b/catalog.html
@@ -94,7 +94,7 @@
       <section class="filter">
         <h2 class="section-title filter-title"><span>фильтр:</span></h2>
         <form method="get" action="https://echo.htmlacademy.ru/" class="filter-form">
-          <fieldset>
+          <fieldset class="field-cost">
             <legend class="param-title param-cost">Стоимость</legend>
             <div class="cost-range">
               <div class="current-range">
@@ -105,27 +105,27 @@
               </div>
             </div>
           </fieldset>
-          <fieldset>
+          <fieldset class="field-color">
             <legend class="param-title param-color">Цвет</legend>
-            <input type="checkbox" id="check-black" name="black" value="black" class="color-check" checked>
+            <input type="checkbox" id="check-black" name="color" value="black" class="color-check" checked>
             <label for="check-black" class="checkbox-label">Чёрный</label>
-            <input type="checkbox" id="check-white" name="white" class="color-check" value="white">
+            <input type="checkbox" id="check-white" name="color" class="color-check" value="white">
             <label for="check-white" class="checkbox-label">Белый</label>
-            <input type="checkbox" id="check-blue" name="blue" class="color-check" value="blue" checked>
+            <input type="checkbox" id="check-blue" name="color" class="color-check" value="blue" checked>
             <label for="check-blue" class="checkbox-label">Синий</label>
-            <input type="checkbox" id="check-red" name="red" class="color-check" value="red" checked>
+            <input type="checkbox" id="check-red" name="color" class="color-check" value="red" checked>
             <label for="check-red" class="checkbox-label">Красный</label>
-            <input type="checkbox" id="check-pink" name="pink" class="color-check" value="pink">
+            <input type="checkbox" id="check-pink" name="color" class="color-check" value="pink">
             <label for="check-pink" class="checkbox-label">Розовый</label>
           </fieldset>
-          <fieldset>
+          <fieldset class="field-bt">
             <legend class="param-title param-bt">Bluetooth</legend>
             <input type="radio" id="bt_on" name="bluetooth" value="on" class="bt-radio">
             <label for="bt_on" class="radio-label">Есть</label>
             <input type="radio" id="bt_off" name="bluetooth" value="off" class="bt-radio">
             <label for="bt_off" class="radio-label">Нет</label>
           </fieldset>
-          <button class="link-btn filter-btn" type="submit">показать</button>
+          <button class="btn filter-btn" type="submit">показать</button>
         </form>
       </section>
       <div class="goods-area">
