DRAFT. Adds first script and styles for closing modal-map.

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
             <li>Автотрейдинг</li>
             <li>ЖелДорЭкспедиция</li>
           </ul>
-          <a href="#" class="link-btn">подробнее о нас</a>
+          <a href="#" class="link-btn btn-about-us">подробнее о нас</a>
         </section>
         <section class="contacts">
           <h2>Контакты</h2>
@@ -310,7 +310,7 @@
         </a>
       </div>
     </footer>
-    <section class="pop-up write-us">
+    <section class="modal modal-write-us">
       <h2 class="visually-hidden">Форма обратной связи</h2>
       <form method="get" action="https://echo.htmlacademy.ru/">
         <label for="client-name">Ваше имя:</label>
@@ -323,8 +323,11 @@
         <button type="button" class="close-btn" aria-label="Закрыть форму">&times;</button>
       </form>
     </section>
-    <section class="pop-up map">
-      <button type="button" class="close-btn" aria-label="Закрыть форму">&times;</button>
+    <section class="modal modal-map">
+      <h2 class="visually-hidden">Как проехать до нашего магазина</h2>
+      <img src="img/index/map-big.png" alt="Наш магазин на улице Строителей, 15" width="960" height="559">
+      <button type="button" class="close-btn close-map" aria-label="Закрыть форму">&times;</button>
     </section>
+    <script src="js/scripts.js"></script>
   </body>
 </html>
