--- a/index.html
+++ b/index.html
@@ -325,6 +325,7 @@
     </section>
     <section class="modal modal-map">
       <h2 class="visually-hidden">Как проехать до нашего магазина</h2>
+      <iframe src="https://yandex.ru/map-widget/v1/-/CBBayFEBSC" width="960" height="560" allowfullscreen="true"></iframe>
       <img src="img/index/map-big.png" alt="Наш магазин на улице Строителей, 15" width="960" height="559">
       <button type="button" class="close-btn close-map" aria-label="Закрыть форму">&times;</button>
     </section>
