FIX. Adds final styles for "write us form" and also adds box-shadow for both modals.

--- a/index.html
+++ b/index.html
@@ -310,20 +310,18 @@
         </a>
       </div>
     </footer>
-    <section class="modal modal-write-us"><!---->
+    <section class="modal modal-write-us">
       <h2 class="visually-hidden">Форма обратной связи</h2>
       <form method="get" action="https://echo.htmlacademy.ru/" class="write-us-form">
-        <div class="name-wrapper">
+        <div class="inputs-wrapper">
           <label for="client-name">Ваше имя:</label>
-          <input type="text" id="client-name" name="client-name" placeholder="Имя Фамилия" class="name-input">
-        </div>
-        <div class="email-wrapper">
           <label for="email">Ваш e-mail:</label>
+          <input type="text" id="client-name" name="client-name" placeholder="Имя Фамилия" class="name-input">
           <input type="email" id="email" name="email" placeholder="email@example.com" class="email-input">
         </div>
         <label for="message">Текст письма:</label>
         <textarea name="message" id="message" placeholder="В свободной форме" class="message-input"></textarea>
-        <button type="submit" class="link-btn">отправить</button>
+        <button type="submit" class="btn submit-btn">отправить</button>
         <button type="button" class="close-btn" aria-label="Закрыть форму">&times;</button>
       </form>
     </section>
