--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="description-wrapper">
             <h2 class="slider-title">Делай селфи, <br>как Бен Стиллер!</h2>
             <p class="slider-el-description">
-              Самая длянная палка для селфи доступна в нашем магазине.
+              Самая длинная палка для селфи доступна в нашем магазине.
               Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
             </p>
             <a href="#" class="link-btn">подробнее</a>
@@ -113,41 +113,45 @@
           <div class="img-wrapper">
             <img src="img/index/slider/slider-2.png" alt="фитнес-браслет" width="345" height="485">
           </div>
-          <h2 class="slider-title">Худеем правильно!</h2>
-          <p class="slider-el-description">
-            Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия
-            и соблюдать диету.
-          </p>
-          <a href="#" class="link-btn">подробнее</a>
-          <table class="slider-char-table">
-            <tr>
-              <td>48 часов</td>
-            </tr>
-            <tr>
-              <th>Без зарядки</th>
-            </tr>
-          </table>
+          <div class="description-wrapper">
+            <h2 class="slider-title">Худеем<br>правильно!</h2>
+            <p class="slider-el-description">
+              Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия
+              и соблюдать диету.
+            </p>
+            <a href="#" class="link-btn">подробнее</a>
+            <table class="slider-char-table">
+              <tr>
+                <td>48 часов</td>
+              </tr>
+              <tr>
+                <th>Без зарядки</th>
+              </tr>
+            </table>
+          </div>
         </div>
         <div class="slider-element slide-quadrocopt visually-hidden">
           <div class="img-wrapper">
             <img src="img/index/slider/slider-3.png" alt="квадрокоптер" width="526" height="334">
           </div>
-          <h2 class="slider-title">Порхает как бабочка, жалит как пчела!</h2>
-          <p class="slider-el-description">
-            Этот обычный, на первый взгляд, квадрокоптер оснащён мощным лазером,
-            замаскированным под стандартную камеру.
-          </p>
-          <a href="#" class="link-btn slider-link">подробнее</a>
-          <table class="slider-char-table">
-            <tr>
-              <td>800 м</td>
-              <td>50 м</td>
-            </tr>
-            <tr>
-              <th>Дальность полёта</th>
-              <th>Радиус поражения</th>
-            </tr>
-          </table>
+          <div class="description-wrapper">
+            <h2 class="slider-title">Порхает как бабочка, жалит как пчела!</h2>
+            <p class="slider-el-description">
+              Этот обычный, на первый взгляд, квадрокоптер оснащён мощным лазером,
+              замаскированным под стандартную камеру.
+            </p>
+            <a href="#" class="link-btn slider-link">подробнее</a>
+            <table class="slider-char-table">
+              <tr>
+                <td>800 м</td>
+                <td>50 м</td>
+              </tr>
+              <tr>
+                <th>Дальность полёта</th>
+                <th>Радиус поражения</th>
+              </tr>
+            </table>
+          </div>
         </div>
         <div class="slider-switch">
           <a class="slider-btn">01</a>
