Few fixes for pixel perfect.

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               Самая длинная палка для селфи доступна в нашем магазине.
               Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
             </p>
-            <a href="#" class="link-btn">подробнее</a>
+            <a href="#" class="link-btn link-more">подробнее</a>
             <table class="slider-char-table">
               <tr>
                 <td>8,5 м</td>
@@ -119,7 +119,7 @@
               Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия
               и соблюдать диету.
             </p>
-            <a href="#" class="link-btn">подробнее</a>
+            <a href="#" class="link-btn link-more">подробнее</a>
             <table class="slider-char-table">
               <tr>
                 <td>48 часов</td>
@@ -140,7 +140,7 @@
               Этот обычный, на первый взгляд, квадрокоптер оснащён мощным лазером,
               замаскированным под стандартную камеру.
             </p>
-            <a href="#" class="link-btn slider-link">подробнее</a>
+            <a href="#" class="link-btn link-more">подробнее</a>
             <table class="slider-char-table">
               <tr>
                 <td>800 м</td>
