FIX. Adds effects for inputs in filter.

--- a/catalog.html
+++ b/catalog.html
@@ -124,7 +124,7 @@
           </fieldset>
           <fieldset class="field-bt">
             <legend class="param-title param-bt">Bluetooth</legend>
-            <input type="radio" id="bt_on" name="bluetooth" value="on" class="bt-radio">
+            <input type="radio" id="bt_on" name="bluetooth" value="on" class="bt-radio" checked>
             <label for="bt_on" class="radio-label">Есть</label>
             <input type="radio" id="bt_off" name="bluetooth" value="off" class="bt-radio">
             <label for="bt_off" class="radio-label">Нет</label>
