Fixes for pixel perfect for index page.

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <img src="img/index/slider/slider-1.png" alt="монопод для селфи" width="384" height="486">
           </div>
           <div class="description-wrapper">
-            <h2 class="slider-title">Делай селфи, <br>как Бен Стиллер!</h2>
+            <h2 class="slider-title">Делай селфи, как&nbsp;Бен&nbsp;Стиллер!</h2>
             <p class="slider-el-description">
               Самая длинная палка для селфи доступна в нашем магазине.
               Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
@@ -101,11 +101,11 @@
                 <td>5 кг</td>
                 <td>Карбон</td>
               </tr>
-                <tr>
-                  <th>Длина палки</th>
-                  <th>Вес палки</th>
-                  <th>Материал</th>
-                </tr>
+              <tr>
+                <th>Длина палки</th>
+                <th>Вес палки</th>
+                <th>Материал</th>
+              </tr>
             </table>
           </div>
         </div>
@@ -162,7 +162,7 @@
       <section class="categories">
         <h2 class="visually-hidden">Популярные товаров</h2>
         <a href="#" class="link-popular popular-vr">Виртуальная реальность</a>
-        <a href="#" class="link-popular popular-selfie">Моноподы&nbsp;для селфи</a>
+        <a href="#" class="link-popular popular-selfie">Моноподы для&nbsp;селфи</a>
         <a href="#" class="link-popular popular-action">Экшн-камеры</a>
         <a href="#" class="link-popular popular-fitness">Фитнес-браслеты</a>
         <a href="#" class="link-popular popular-smartw">Умные часы</a>
@@ -227,16 +227,16 @@
       <section class="info-wrapper">
         <section class="about-us">
           <h2>О нас</h2>
-          <p>
+          <p class="info-parag">
             Огромный выбор гаджетов не оставит равнодушным гика,
             который есть в каждом из нас.
           </p>
-          <p>
+          <p class="info-parag">
             Мы можем доставить ваш товар в самые отдалённые точки
             России! DEVICE работает со многими транспортными компаниями:
           </p>
           <ul class="transport-list">
-            <li>Деловые линии</li>
+            <li>Деловые Линии</li>
             <li>Автотрейдинг</li>
             <li>ЖелДорЭкспедиция</li>
           </ul>
@@ -244,7 +244,7 @@
         </section>
         <section class="contacts">
           <h2>Контакты</h2>
-          <p>
+          <p class="info-parag">
             Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете
             проверить работоспособность покупки. Всякое бывает.
           </p>
