Makes almost all fixes for pixel perfect in catalog page.

--- a/catalog.html
+++ b/catalog.html
@@ -161,10 +161,10 @@
           </article>
           <article class="good-item">
             <a href="#" class="item-link">
-              <img src="img/catalog/goods/sst-professional.png" alt="профессиональная селфи-палка" width="360" height="380">
+              <img src="img/catalog/goods/sst-professional.png" alt="профессиональная селфи палка" width="360" height="380">
             </a>
             <div class="item-info">
-              <h3 class="good-name">Профессиональная селфи-палка</h3>
+              <h3 class="good-name">Профессиональная селфи&#8209;палка</h3>
               <p class="price">1&nbsp;500 руб.</p>
             </div>
             <p class="good-hover-actions">
@@ -177,7 +177,7 @@
               <img src="img/catalog/goods/sst-waterprot.png" alt="непотопляемая селфи-палка" width="360" height="380">
             </a>
             <div class="item-info">
-              <h3 class="good-name">Непотопляемая селфи-палка</h3>
+              <h3 class="good-name">Непотопляемая селфи&#8209;палка</h3>
               <p class="price">2&nbsp;500 руб.</p>
             </div>
             <p class="good-hover-actions">
