Adds more pixel perfect fixes for both pages.

--- a/catalog.html
+++ b/catalog.html
@@ -200,9 +200,11 @@
           </article>
           <nav class="goods-page-nav" aria-label="навигация по каталогу">
             <a href="#" class="nav-link back">назад</a>
-            <a class="page-number active-page">1</a>
-            <a href="#" class="page-number">2</a>
-            <a href="#" class="page-number">3</a>
+            <div class="number-nav">
+              <a class="page-number active-page">1</a>
+              <a href="#" class="page-number">2</a>
+              <a href="#" class="page-number">3</a>
+            </div>
             <a href="#" class="nav-link forward">вперёд</a>
           </nav>
         </section>
