--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <li class="catalog-item"><a href="#" class="site-link">Виртуальная реальность</a></li>
               <li class="catalog-item"><a href="#" class="site-link">Фитнес-браслеты</a></li>
               <li class="catalog-item"><a href="#" class="site-link">Квадрокоптеры</a></li>
-              <li class="catalog-item"><a href="#" class="site-link">Моноподы для селфи</a></li>
+              <li class="catalog-item"><a href="catalog.html" class="site-link">Моноподы для селфи</a></li>
               <li class="catalog-item"><a href="#" class="site-link">Умные часы</a></li>
               <li class="catalog-item"><a href="#" class="site-link">Экшн-камеры</a></li>
             </ul>
@@ -84,9 +84,9 @@
     <main>
       <h1 class="visually-hidden">Интернет-магазин Device</h1>
       <div class="slider-wrapper">
-        <div class="slider-element slide-selfie">
+        <div class="slider-element slide-selfie visually-hidden">
           <div class="img-wrapper">
-            <img src="img/index/slider/slider-1.png" alt="монопод для селфи" width="384" height="486">
+            <img src="img/index/slider/slider-1.png" alt="монопод для селфи" width="384" height="486" class="selfie-img">
           </div>
           <div class="description-wrapper">
             <h2 class="slider-title">Делай селфи, как&nbsp;Бен&nbsp;Стиллер!</h2>
@@ -111,7 +111,7 @@
         </div>
         <div class="slider-element slide-whatch visually-hidden">
           <div class="img-wrapper">
-            <img src="img/index/slider/slider-2.png" alt="фитнес-браслет" width="345" height="485">
+            <img src="img/index/slider/slider-2.png" alt="фитнес-браслет" width="345" height="485" class="whatch-img">
           </div>
           <div class="description-wrapper">
             <h2 class="slider-title">Худеем<br>правильно!</h2>
@@ -130,9 +130,9 @@
             </table>
           </div>
         </div>
-        <div class="slider-element slide-quadrocopt visually-hidden">
+        <div class="slider-element slide-quadrocopt">
           <div class="img-wrapper">
-            <img src="img/index/slider/slider-3.png" alt="квадрокоптер" width="526" height="334">
+            <img src="img/index/slider/slider-3.png" alt="квадрокоптер" width="526" height="334" class="quadrocopt-img">
           </div>
           <div class="description-wrapper">
             <h2 class="slider-title">Порхает как бабочка, жалит как пчела!</h2>
@@ -179,7 +179,7 @@
           </dt>
           <dd class="service-desc delivery">
             <h3>Доставка</h3>
-            <p>
+            <p class="delivery-descr">
               Мы с удовольствием доставим ваш товар прямо к вашему подъезду
               совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его
               на ваш этаж.
@@ -190,9 +190,9 @@
           </dt>
           <dd class="service-desc warranty">
             <h3>Гарантия</h3>
-            <p>
+            <p class="warranty-desrc">
               Если из-за возгорания купленного у нас товара у вас сгорит
-              дом — не переживайте, мы выдадим вам новый. Товар, не дом,
+              дом — не переживайте, мы выдадим вам новый. Товар,&nbsp;не&nbsp;дом,
               конечно же.
             </p>
           </dd>
@@ -201,7 +201,7 @@
           </dt>
           <dd class="service-desc credit">
             <h3>Кредит</h3>
-            <p>
+            <p class="credit-descr">
               Залезть в долговую яму стало проще! Кредитные консультанты подберут
               для вас наиболее выгодные условия кредита. Выгодные для нашего банка,
               разумеется.
