Part of last commit.

--- a/index.html
+++ b/index.html
@@ -211,17 +211,13 @@
       </section>
       <section class="brands">
         <h2 class="visually-hidden">Бренды</h2>
-        <a href="#" class="brand-link" aria-label="товары от DJI">
-          <img src="img/index/brands/dji.png" alt="DJI" width="260" height="100">
+        <a href="#" class="brand-link img-dji" aria-label="товары от DJI">
         </a>
-        <a href="#" class="brand-link" aria-label="товары от SP Gadgets">
-          <img src="img/index/brands/sp-gadgets.png" alt="SP Gadgets" width="260" height="100">
+        <a href="#" class="brand-link img-sp-gadgets" aria-label="товары от SP Gadgets">
         </a>
-        <a href="#" class="brand-link" aria-label="товары от GoPro">
-          <img src="img/index/brands/gopro.png" alt="GoPro" width="260" height="100">
+        <a href="#" class="brand-link img-gopro" aria-label="товары от GoPro">
         </a>
-        <a href="#" class="brand-link" aria-label="товары от HTC Vive">
-          <img src="img/index/brands/vive.png" alt="HTC Vive" width="260" height="100">
+        <a href="#" class="brand-link img-vive" aria-label="товары от HTC Vive">
         </a>
       </section>
       <section class="info-wrapper">
