Adds min style file and sets it as default styles for both pages.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Девайс</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/min-style.css">
   </head>
   <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
     <symbol id="icon-user" viewBox="0 0 13 12">
@@ -84,7 +84,7 @@
     <main>
       <h1 class="visually-hidden">Интернет-магазин Device</h1>
       <div class="slider-wrapper">
-        <div class="slider-element slide-selfie visually-hidden">
+        <div class="slider-element slide-selfie">
           <div class="img-wrapper">
             <img src="img/index/slider/slider-1.png" alt="монопод для селфи" width="384" height="486" class="selfie-img">
           </div>
@@ -130,7 +130,7 @@
             </table>
           </div>
         </div>
-        <div class="slider-element slide-quadrocopt">
+        <div class="slider-element slide-quadrocopt visually-hidden">
           <div class="img-wrapper">
             <img src="img/index/slider/slider-3.png" alt="квадрокоптер" width="526" height="334" class="quadrocopt-img">
           </div>
