--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>HTML Academy: Девайс</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/min-style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <!--<link rel="stylesheet" href="css/min-style.css">-->
   </head>
   <body>
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
