Adds non-breaking spaces for service descriptions.

--- a/index.html
+++ b/index.html
@@ -181,9 +181,8 @@
           <dd class="service-desc delivery">
             <h3>Доставка</h3>
             <p class="delivery-descr">
-              Мы с удовольствием доставим ваш товар прямо к вашему подъезду
-              совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его
-              на ваш этаж.
+              Мы с удовольствием доставим ваш товар прямо к вашему подъезду&nbsp;совершенно бесплатно!
+              Ведь мы неплохо заработаем,&nbsp;поднимая его на ваш этаж.
             </p>
           </dd>
           <dt class="service-name">
@@ -193,8 +192,8 @@
             <h3>Гарантия</h3>
             <p class="warranty-desrc">
               Если из-за возгорания купленного у нас товара у вас сгорит
-              дом — не переживайте, мы выдадим вам новый. Товар,&nbsp;не&nbsp;дом,
-              конечно же.
+              дом&nbsp;—&nbsp;не&nbsp;переживайте, мы выдадим вам новый.
+              Товар,&nbsp&nbsp;не&nbsp&nbsp;дом,&nbsp;конечно же.
             </p>
           </dd>
           <dt class="service-name">
@@ -204,7 +203,7 @@
             <h3>Кредит</h3>
             <p class="credit-descr">
               Залезть в долговую яму стало проще! Кредитные консультанты подберут
-              для вас наиболее выгодные условия кредита. Выгодные для нашего банка,
+              для вас наиболее выгодные условия&nbsp;кредита. Выгодные для нашего банка,
               разумеется.
             </p>
           </dd>
