Adds data-attributes to slides and buttons.

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <main>
       <h1 class="visually-hidden">Интернет-магазин Device</h1>
       <div class="slider-wrapper">
-        <div class="slider-element slide-selfie">
+        <div class="slider-element slide-selfie" data-id="0">
           <div class="img-wrapper">
             <img src="img/index/slider/slider-1.png" alt="монопод для селфи" width="384" height="486" class="selfie-img">
           </div>
@@ -110,7 +110,7 @@
             </table>
           </div>
         </div>
-        <div class="slider-element slide-whatch visually-hidden">
+        <div class="slider-element slide-whatch visually-hidden" data-id="1">
           <div class="img-wrapper">
             <img src="img/index/slider/slider-2.png" alt="фитнес-браслет" width="345" height="485" class="whatch-img">
           </div>
@@ -131,7 +131,7 @@
             </table>
           </div>
         </div>
-        <div class="slider-element slide-quadrocopt visually-hidden">
+        <div class="slider-element slide-quadrocopt visually-hidden" data-id="2">
           <div class="img-wrapper">
             <img src="img/index/slider/slider-3.png" alt="квадрокоптер" width="526" height="334" class="quadrocopt-img">
           </div>
@@ -155,9 +155,9 @@
           </div>
         </div>
         <div class="slider-switch">
-          <a class="slider-btn">01</a>
-          <a class="slider-btn">02</a>
-          <a class="slider-btn">03</a>
+          <a class="slider-btn" data-id="0">01</a>
+          <a class="slider-btn" data-id="1">02</a>
+          <a class="slider-btn" data-id="2">03</a>
         </div>
       </div>
       <section class="categories">
