Position fixes in service section.

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <p class="warranty-desrc">
               Если из-за возгорания купленного у нас товара у вас сгорит
               дом&nbsp;—&nbsp;не&nbsp;переживайте, мы выдадим вам новый.
-              Товар,&nbsp&nbsp;не&nbsp&nbsp;дом,&nbsp;конечно же.
+              Товар,&nbsp;не&nbsp;дом,&nbsp;конечно же.
             </p>
           </dd>
           <dt class="service-name">
