Few fixes for catalog page.

--- a/catalog.html
+++ b/catalog.html
@@ -141,8 +141,8 @@
             <a href="#" class="sort-attribute">По типу</a>
             <a href="#" class="sort-attribute">По популярности</a>
             <div class="switch-wrapper">
-              <a href="#" class="sort-switch-btn up-switch active-switch" aria-label="по возрастанию"></a>
-              <a href="#" class="sort-switch-btn down-switch" aria-label="по убыванию"></a>
+              <a href="#" class="sort-switch-btn up-switch" aria-label="по возрастанию"></a>
+              <a href="#" class="sort-switch-btn down-switch active-switch" aria-label="по убыванию"></a>
             </div>
           </div>
         </section>
