--- a/catalog.html
+++ b/catalog.html
@@ -93,7 +93,9 @@
     </section>
     <div class="grid-wrapper">
       <section class="filter">
-        <h2 class="section-title filter-title"><span>фильтр:</span></h2>
+        <div class="filter-title">
+          <h2 class="section-title">фильтр:</h2>
+        </div>
         <form method="get" action="https://echo.htmlacademy.ru/" class="filter-form">
           <fieldset class="field-cost">
             <legend class="param-title param-cost">Стоимость</legend>
@@ -112,22 +114,22 @@
           </fieldset>
           <fieldset class="field-color">
             <legend class="param-title param-color">Цвет</legend>
-            <input type="checkbox" id="check-black" name="color" value="black" class="color-check" checked>
+            <input type="checkbox" id="check-black" name="color" value="black" class="color-check visually-hidden" checked>
             <label for="check-black" class="checkbox-label">Чёрный</label>
-            <input type="checkbox" id="check-white" name="color" class="color-check" value="white">
+            <input type="checkbox" id="check-white" name="color" class="color-check visually-hidden" value="white">
             <label for="check-white" class="checkbox-label">Белый</label>
-            <input type="checkbox" id="check-blue" name="color" class="color-check" value="blue" checked>
+            <input type="checkbox" id="check-blue" name="color" class="color-check visually-hidden" value="blue" checked>
             <label for="check-blue" class="checkbox-label">Синий</label>
-            <input type="checkbox" id="check-red" name="color" class="color-check" value="red" checked>
+            <input type="checkbox" id="check-red" name="color" class="color-check visually-hidden" value="red" checked>
             <label for="check-red" class="checkbox-label">Красный</label>
-            <input type="checkbox" id="check-pink" name="color" class="color-check" value="pink">
+            <input type="checkbox" id="check-pink" name="color" class="color-check visually-hidden" value="pink">
             <label for="check-pink" class="checkbox-label">Розовый</label>
           </fieldset>
           <fieldset class="field-bt">
             <legend class="param-title param-bt">Bluetooth</legend>
-            <input type="radio" id="bt_on" name="bluetooth" value="on" class="bt-radio" checked>
+            <input type="radio" id="bt_on" name="bluetooth" value="on" class="bt-radio visually-hidden" checked>
             <label for="bt_on" class="radio-label">Есть</label>
-            <input type="radio" id="bt_off" name="bluetooth" value="off" class="bt-radio">
+            <input type="radio" id="bt_off" name="bluetooth" value="off" class="bt-radio visually-hidden">
             <label for="bt_off" class="radio-label">Нет</label>
           </fieldset>
           <button class="btn filter-btn" type="submit">показать</button>
