--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <title>HTML Academy: Девайс</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
-    <!--<link rel="stylesheet" href="css/min-style.css">-->
+    <link rel="stylesheet" href="css/min-style.css">
   </head>
   <body>
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
@@ -331,6 +330,6 @@
       <img src="img/index/map-big.png" alt="Наш магазин на улице Строителей, 15" width="960" height="559">
       <button type="button" class="close-btn close-map" aria-label="Закрыть форму">&times;</button>
     </section>
-    <script src="js/scripts.js"></script>
+    <script src="js/min-scripts.js"></script>
   </body>
 </html>
